--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@
 }
 
 
-
-body {
+container {
     padding: 0;
     margin: 0;
     width: 100vw;
@@ -15,6 +14,33 @@ body {
     align-items: center;
     text-align: center;
 }
+
+.high {
+    padding: 0;
+    margin-top: 25%;
+
+}
+
+.high-scores {
+    margin-top: 25%;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    bottom: 30px;
+}
+.highscores {
+    align-items: center;
+    text-align: center;
+    position: relative;
+    bottom:50px;
+}
+
+.done {
+    text-align: center;
+    position: relative;
+    bottom: 120px;
+}
+
 
 .btn-grid {
     display: grid;
@@ -31,4 +57,9 @@ body {
 .btn:hover {
     background-color: chartreuse;
     opacity: 5;
+}
+
+.scores {
+    position:relative;
+    bottom: 25px;;
 }
